[tool.poetry]
name = "python-accounting"
version = "2.0.0"
description = "The world's most comprehensive python Double Entry Accounting Library with IFRS/GAAP support"
authors = ["Edward Mungai <emungai@microbooks.io>"]
readme = "README.md"
packages = [{include = "python_accounting"}, {include = "config.toml"}]
keywords = ["accounting", "double-entry", "bookkeeping", "IFRS", "GAAP", "financial-statements"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[tool.poetry.scripts]
pyaccount = "python_accounting.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sqlalchemy = "^2.0.36"
python-dateutil = "^2.9.0"
strenum = "^0.4.15"
toml = "^0.10.2"
pydantic = "^2.10.0"
rich = "^13.9.0"
click = "^8.1.7"

# Optional database drivers
mysqlclient = {version = "^2.2.4", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}

# Optional export dependencies
reportlab = {version = "^4.2.0", optional = true}
openpyxl = {version = "^3.1.5", optional = true}

[tool.poetry.extras]
mysql = ["mysqlclient"]
postgres = ["psycopg2-binary"]
pdf = ["reportlab"]
excel = ["openpyxl"]
all = ["mysqlclient", "psycopg2-binary", "reportlab", "openpyxl"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
pylint = "^3.1.0"
tox = "^4.13.0"
dill = "^0.3.8"
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=python_accounting --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
